jdk9: fix deprecation of Class#newInstance